added endpoint for Logout it works with Redis updated docker-compose for jwt added endpoints for profile updated vacancy